vc2-salesforce-version/force-app/main/default/objects/Province_Economy__c/Province_Economy__c.object-meta.xml
<CustomObject>
    <label>Province Economy</label>
    <pluralLabel>Province Economies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <nameField>
        <label>Province Economy Key</label>
        <type>Text</type>
    </nameField>
</CustomObject>