vc2-salesforce-version/force-app/main/default/objects/Province_Economy__c/fields/Artisan_GDP__c.field-meta.xml
<CustomField>
    <fullName>Artisan_GDP__c</fullName>
    <label>Artisan GDP (£)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>