vc2-salesforce-version/force-app/main/default/objects/Province_Economy__c/fields/Artisan_Spending__c.field-meta.xml
<CustomField>
    <fullName>Artisan_Spending__c</fullName>
    <label>Artisan Spending (£)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>