vc2-salesforce-version/force-app/main/default/objects/Province_Economy__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <label>Province</label>
    <type>Lookup</type>
    <referenceTo>Province__c</referenceTo>
    <relationshipName>Province_Economies</relationshipName>
    <required>true</required>
</CustomField>