vc2-salesforce-version/force-app/main/default/objects/Province_Economy__c/fields/RGO_Income__c.field-meta.xml
<CustomField>
    <fullName>RGO_Income__c</fullName>
    <label>RGO Income (£)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>